--- a/.env
+++ b/.env
@@ -4,3 +4,6 @@ DB_HOST=localhost
 DB_USER=root
 DB_PASS=""
 MYSQL_DB=Inventory
+SESS_NAME='nazrul'
+SESS_LIFETIME=720000
+SESS_SECRET='thisissecret'
